--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weatherapp",
+  "name": "weatherapp-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,12 +8,16 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "vite": "^4.2.0"
-  },
   "dependencies": {
-    "jquery": "^3.6.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ress": "^5.0.2",
     "toastify-js": "^1.12.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "vite": "^4.2.0"
   }
 }
